--- a/materiusaha.html
+++ b/materiusaha.html
@@ -117,6 +117,11 @@
 		  > Dan pria yang tidak melakukan usaha adalah pria yang saat berjalan sambil membawa kotak bunga</font
 		>
 	  </p>
+	  <p>
+	    <font size="4"
+		  > selanjutnya</font
+	        >
+	</p>
     </body>
   </head>
 </html>
