--- a/materiusaha.html
+++ b/materiusaha.html
@@ -3,7 +3,12 @@
   <head>
     <head>
       <title>Materi Fisika SMA X USAHA</title>
-    </head>
+	  <style>
+	  body {
+	    background-color:#bcf5e8;
+	  }
+	  </style>
+     </head>
     <body>
       <p>
         <font face="Gungsuh" size="3">
@@ -114,8 +119,20 @@
 	  </p>
 	  <p>
 	    <font size="4"
-		  > Dan pria yang tidak melakukan usaha adalah pria yang saat berjalan sambil membawa kotak bunga</font
+		  >Dan pria yang tidak melakukan usaha adalah pria yang saat berjalan sambil membawa kotak bunga</font
 		>
+	  </p>
+	  <p>
+	  <h2>
+	    Jadi, Bagaimana besar usaha jika gaya yang bekerja TIDAK menyebabkan PERPINDAHAN..???
+	  </h2>
+	  </p>
+	  <p>
+	  <img src="f=0.gif"width="40%"height="auto"/>
+	  <p>
+	  <h3>Meskipun gaya yang diberikan pada suatu benda itu besar namun jika
+                         gaya tersebut tidak menyebabkan perpindahan maka dapat dikatakan kita tidak melakukan USAHA</h3						 
+	    >
 	  </p>
     </body>
   </head>
